--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <br>
     <br>
     <p>Screenshot of game:</p>
-    <img src="sample.png" alt="game preview">
+    <img src="images/sample.png" alt="game preview" width="300px">
  
 </body>
 </html>
